<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="startViewModel"
            type="com.example.exam.start.StartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:contest=".exam.StartFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pte_name"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/order_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="true"
                android:textSize="20sp"
                android:onClick="@{(view)->startViewModel.onSetMode(view)}"
                android:text="@string/order" />

            <RadioButton
                android:id="@+id/random_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/random"
                android:textSize="20sp"
                android:onClick="@{(view)->startViewModel.onSetMode(view)}"/>
        </RadioGroup>

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            android:textSize="20sp"
            android:onClick="@{() -> startViewModel.onStartExam()}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>